# tabcloud_platform_data_loader

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: run.example.yml  run.test.yml.example  storage.s3.example.yaml
docs/: README.md  architecture.md
mappings/: README.md
mappings/loader/: background_jobs.tds  background_jobs.yml  generic_activity_log.yml  login_hyper.yaml  platform_data_bundle.yml  template.yml
mappings/transformer/: audit_events.yaml  background_jobs.yaml  entity_snapshot_auto.yaml  generic_activity_log_auto.yaml  login_analytics.yaml  template.yaml  tenant_reference_auto.yaml  vizql_http_request.yaml
scripts/: probe_users_endpoint.py
src/: secrets_cli.py
src/common/: config_values.py  dataset_profile.py  reference_entity.py  secrets.py
src/extractor/: __init__.py  __main__.py  extractor_cli.py  http_retry.py  path_layout.py  reference.py  result.py  retriever.py
src/loader/: __init__.py  __main__.py  diff.py  load_state.py  loader.py  loader_cli.py  loader_mapping.py  logging_utils.py  orchestrate.py  state.py
src/loader/targets/: __init__.py  hyper.py  tableau_publish.py  tdsx_build.py
src/runner/: __main__.py  bootstrap.py  cli.py  config.py  plan.py  preflight.py  validate.py
src/storage/: __init__.py  base.py  config.py  local.py  presence.py  run_logging.py  s3.py
src/transformer/: __init__.py  __main__.py  csv_io.py  event_type_catalog.py  logging_utils.py  mapping.py  parquet_io.py  pipeline.py  reader.py  transformer_cli.py
tests/: conftest.py  test_reference_loader.py  test_snapshots.py
tests/common/: test_reference_entity.py  test_secrets.py
tests/extractor/: test_download_validation.py  test_http_retry.py  test_path_layout.py  test_reference.py  test_retriever_outcome.py
tests/integration/: README.md  conftest.py  test_connectivity.py  test_e2e_pipeline.py
tests/integration/mappings/: test_activity_log.yaml  test_entity_snapshot.yaml  test_loader_bundle.yml
tests/loader/: test_loader_mapping.py  test_loader_publish.py  test_orchestrate_secret.py
tests/runner/: test_bootstrap.py  test_config.py  test_plan.py  test_published_through.py  test_runner_flow.py  test_secrets_runner.py  test_validate.py
tests/storage/: test_parquet_validation.py  test_path_traversal.py  test_run_logging.py  test_s3_config.py  test_secrets_storage.py
tests/transformer/: test_event_type_catalog.py  test_passthrough_validation.py  test_reference_pipeline.py
(+2 files in other folders)
